# ComfyUI-Hi3DGen

./: IF_Trellis.py  IF_TrellisCheckpointLoader.py  README.md  StableXWrapper.py  __init__.py  linux_requirements.txt  pyproject.toml  requirements.txt  trellis_model_manager.py  win_requirements.txt
trellis/: __init__.py  backend_config.py
trellis/models/structured_latent_vae/: __init__.py
trellis/pipelines/: trellis_image_to_3d.py
trellis/representations/: __init__.py
workflow/: Hi3DGen_WF_single.json
